--- a/ElevateChatBot.UI/assets/style.css
+++ b/ElevateChatBot.UI/assets/style.css
@@ -63,44 +63,157 @@
     margin-right: 5rem;
     width: 18rem;
     z-index: 10;
+    background-color: transparent; /* Make the background fully transparent */
+    box-shadow: -17px -9px 20px rgba(0, 0, 0, 0.5);
 
 }
 
 #chatbotheader{
     background-color: #028090;
-    padding: 0.2rem;
+    padding: 0.2rem 0.2rem 4rem 0.2rem ;
     height: 15%;
     border-top-left-radius: 0.8rem;
     border-top-right-radius: 0.8rem;
+    color: #fff;
     
 }
 
 #chatbotJ #chatbotheader h1{
     font-family: fontb;
     font-size: 1.8rem;
+    padding-left: 3.8rem;
     color: #fff;
 }
 
-#chat{
+#chatbotJ #chatbotheader h2{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.8rem;
+    letter-spacing: 0.5rem;
+    padding-left: 4.5rem;
+    font-family: fontli;
+}
+
+#chatbotheader #options{
+    justify-content: space-between !important;
+
+}
+
+#chatbotheader .fa-times-circle{
+    color: #C70039;
+    margin-top: 0.2rem;
+    margin-right: 0.2rem;
+    font-size: 1.4rem;
+}
+
+#chatbotJ #chatbotheader .chaticon{
+    position: absolute;
+    z-index: 1;
+    top: -1rem;
+    left: -3rem;
+    border-radius: 1rem;
+    width: 6rem;
+    height: 6rem;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #09526e;
+    box-shadow: 14px -3px 16px 0px #2c2f33c4;
+    align-content: space-around;
+    background-color: #05668D;
+}
+
+#chatbotJ #chatbotheader .chaticon .fa-comments{
+    font-size: 4.5rem;
+    display: flex;
+    justify-content: center;
+}
+
+#chat {
     background-color: #EBF2FA;
     height: 60%;
+    overflow-y: auto; 
+}
+
+
+#chat::-webkit-scrollbar {
+    width: 10px; 
+}
+
+
+#chat::-webkit-scrollbar-thumb {
+    background-color: #666; 
+    border-radius: 10px; 
+}
+
+#chat::-webkit-scrollbar-track {
+    background-color: #ddd; 
+    border-radius: 10px; 
+}
+
+.messagescontent .message p {
+    font-family: chatfontr;
+    font-size: 0.9rem;
+}
+
+.time {
+    font-family: fontli;
+    font-size: 0.6rem;
+}
+
+.messages .message {
+    clear: both;
+    float: left;
+    padding: 6px 10px 7px;
+    border-radius: 10px 10px 10px 0;
+    background: rgba(0, 0, 0, 0.3);
+    margin: 8px 0;
+    font-size: 14px;
+    line-height: 1.4;
+    margin-left: 35px;
+    position: relative;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    max-width: 70%;
+  }
+
+  .messagescontent .message-personal{
+    float: right !important;
+    color: #fff;
+    text-align: right;
+    background: -webkit-linear-gradient(330deg, #02C39A, #028090) !important;
+    background: linear-gradient(120deg, #02C39A, #028090) !important;
+    border-radius: 10px 10px 0 10px !important;
+    margin: 8px 35px 8px 0 !important;
+}
+
+.messages .message:first-of-type{
+    margin-top: 1rem !important;
+}
+
+#chatheader h2{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.6rem;
+    letter-spacing: 0.5rem;
+    padding-left: 1.2rem;
+    font-family: fontli;
 }
 
 #inputspace{
     background-color: #2C2F33;
     height: 20%;
     padding-bottom: 6rem;
+    border-bottom-left-radius: 0.8rem;
+    border-bottom-right-radius: 0.8rem;
 }
 
 #inputspace form #question{
     border:1px solid #ccc;
   outline:none;
-  width:80%;
-  height:3%;
+  width:90%;
+  height:4%;
   border-radius:33px;
   margin:0 auto;
   color:#151515;
-  font-size:19px;
+  font-size:18px;
   color: #2c2f33;
   font-family: sans-serif;
   margin-top: 0.5rem;
@@ -117,5 +230,43 @@
     margin-top: 1rem;
 }
 
-
 /* END CHATBOT STYLES */
+
+/* BUTTON TO OPEN CHAT */
+
+#chatbotbuttonJ .chatbutton{
+    position: absolute;
+    z-index: 10;
+    top: 1rem;
+    left: 1rem;
+    border-radius: 1rem;
+    width: 6rem;
+    height: 6rem;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #09526e;
+    box-shadow: -17px -9px 20px rgba(0, 0, 0, 0.5);
+    align-content: space-around;
+    background-color: #05668D;
+}
+
+#chatbotbuttonJ .chatbutton .fa-comments{
+    font-size: 5rem;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+}
+
+#chatbotbuttonJ{
+    position: fixed;
+    bottom: 9rem; /* Adjust this value to move it higher */
+    right: 4rem;
+    margin-right: 5rem;
+    border-radius: 2.5px;
+    z-index: 9;
+}
+
+
+
+/* END BUTTON TO OPEN CHAT */
