--- a/ElevateChatBot.UI/assets/style.css
+++ b/ElevateChatBot.UI/assets/style.css
@@ -65,6 +65,8 @@
     z-index: 10;
     background-color: transparent; /* Make the background fully transparent */
     box-shadow: -17px -9px 20px rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    transition: opacity 0.5s ease;
 
 }
 
@@ -267,6 +269,55 @@
     z-index: 9;
 }
 
+/* used to remove and add items */
 
+.disabled {
+    display: none;
+    opacity: 0;
+    pointer-events: none;
+}
+
+
+/* anaimation for typing  */
+.message .dot {
+    animation: mercuryTypingAnimation 1.8s infinite ease-in-out;
+    background: linear-gradient(120deg, #02C39A, #028090);
+    border-radius: 50%;
+    height: 0.5rem;
+    margin-right: 4px;
+    vertical-align: middle;
+    width: 0.5rem;
+    display: inline-block;
+}
+
+.message-bot .dot:nth-child(1) {
+    animation-delay: 200ms;
+}
+
+.message-bot .dot:nth-child(2) {
+    animation-delay: 300ms;
+}
+
+.message-bot .dot:nth-child(3) {
+    animation-delay: 400ms;
+}
+
+.message-bot .dot:last-child {
+    margin-right: 0;
+}
+
+@keyframes mercuryTypingAnimation {
+    0% {
+        transform: translateY(0px);
+    }
+    28% {
+        transform: translateY(-7px);
+    }
+    44% {
+        transform: translateY(0px);
+    }
+}
+
+      
 
 /* END BUTTON TO OPEN CHAT */
