--- a/ElevateChatBot.UI/assets/style.css
+++ b/ElevateChatBot.UI/assets/style.css
@@ -377,6 +377,12 @@ header h2{
     /* align-self: center; */
     
 }
+
+.item a{
+    text-decoration: none;
+    color: black;
+}
+
 #courses div div{
     flex-wrap: wrap;
     width: 100vw;
@@ -416,4 +422,33 @@ header h2{
 #courses .flexcontainer {
     flex-basis: calc(50% - 100px); /* Adjust the width based on your preference */
     margin: 5px; /* Adjust the margin as needed */
+}
+
+
+.banner{
+    width: 100%;
+    background-color: #2c2f33;
+    padding: 0.5rem 0;
+}
+
+
+.banner h2{
+    color: #fff;
+    text-align: center;
+    font-family: title;
+    font-size: 1.1rem;
+    text-decoration: none;
+}
+
+.banner h2 a{
+    color: #02C39A;
+    font-family: title;
+    font-size: 1.1rem;
+    text-decoration: underline;
+    transition: 0.5s;
+}
+
+.banner h2 a:hover{
+    font-size: 1.2rem;
+    transition: 0.5s;
 }
