--- a/ElevateChatBot.UI/assets/chatbotstyle.css
+++ b/ElevateChatBot.UI/assets/chatbotstyle.css
@@ -91,6 +91,15 @@
     border: #2c2f33;
 }
 
+#chatheader #options{
+    justify-content: space-between !important;
+
+}
+
+#chatheader #options .fa-home{
+    font-size: 3rem;
+}
+
 #chatheader .chaticon{
     position: absolute;
     z-index: 1;
@@ -278,7 +287,7 @@ input[disabled] {
 
 @media screen and (max-width: 375px) {
     #chatheader h1 {
-        font-size: 2.6rem;
+        font-size: 2rem;
         margin-left: 4.2rem;
     }
     #chatheader h2 {
@@ -300,6 +309,9 @@ input[disabled] {
         height: 5.2rem;
         top: 1.3rem;
         left: 1.3rem;
+    }
+    #chatheader #options .fa-home{
+        font-size: 2.2rem;
     }
 
 }
