--- a/ElevateChatBot.UI/assets/style.css
+++ b/ElevateChatBot.UI/assets/style.css
@@ -64,7 +64,7 @@
     position: fixed;
     bottom: 1rem;
     right: 1rem;
-    height: 25rem;
+    height: 28rem;
     margin-right: 1rem;
     width: 18rem;
     z-index: 10;
@@ -72,6 +72,7 @@
     box-shadow: -17px -9px 20px rgba(0, 0, 0, 0.5);
     opacity: 1;
     transition: opacity 0.5s ease;
+    margin-bottom: 2.5rem;
 
 }
 
@@ -137,7 +138,7 @@
 
 #chat {
     background-color: #EBF2FA;
-    height: 60%;
+    height: 70%;
     overflow-y: auto; 
 }
 
@@ -226,7 +227,7 @@
   margin-top: 0.5rem;
 }
 
-#inputspace form input[type="submit"]{
+#sendbtn{
     border-radius:33px;
     background-color: #028090;
     border: none;
@@ -235,6 +236,7 @@
     font-family: fontl;
     color: #fff;
     margin-top: 1rem;
+    font-size: 1rem;
 }
 
 /* END CHATBOT STYLES */
