--- a/ElevateChatBot.UI/assets/style.css
+++ b/ElevateChatBot.UI/assets/style.css
@@ -524,32 +524,44 @@ header h2{
     overflow:hidden;
     }
     
-    .popup-content{
+.popup-content{
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     text-align: left;
     font-family: chatfontr;
     font-size: calc(0.8rem + 0.9vw);
-    width: 70vw;
+    width: 50vw;
     }
     
-    #cookietitle{
-    font-size: calc(1rem + 0.9vw);
-    }
-    
-    #close-popup{
-    display: block;
-    margin: 15px auto;
-    padding: 10px 20px;
-    background-color: #05668D;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: calc(1rem + 0.9vw);
-    font-family: chatfontr;
-    color: white;
-    }
-    
+    @media screen and (max-width: 830px) {
+        .popup-content{
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        text-align: left;
+        font-family: chatfontr;
+        font-size: calc(0.8rem + 0.9vw);
+        width: 70vw;
+        }
+    } 
+
+#cookietitle{
+font-size: calc(1rem + 0.9vw);
+}
+
+#close-popup{
+display: block;
+margin: 15px auto;
+padding: 10px 20px;
+background-color: #05668D;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+font-size: calc(1rem + 0.9vw);
+font-family: chatfontr;
+color: white;
+}
+
 
 /* cookie pop */
